2004-10-11  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.DefineType): Only call TypeParameter.Define()
	on our own type parameters, not on the ones we inherit from a containing
	class.

	* expression.cs (Invocation.InferType): Use `==', not `Equals()' for
	the comparision.

	* generic.cs (TypeParameter.Define): We may only be called once.

	* pending.cs (Pending.InterfaceMethod): Call TypeManager.Real_IsEqual()
	instead of TypeManager.IsEqual().

2004-09-28  Martin Baulig  <martin@ximian.com>

	* generic.cs
	(GenericConstraints.EffectiveBaseClass): New public property.
	(TypeParameter.GenericConstraints): New public property.
	(ConstructedType.CheckConstraints): Improved.

	* convert.cs (Convert.TypeParam_EffectiveBaseType): New private method.
	(Convert.TypeParameterConversion): New private method; use this in
	ImplicitReferenceConversion() and ImplicitReferenceConversionExists()
	for all conversions related to type parameters.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* convert.cs (Convert.ImplicitReferenceConversion): Added implicit
	type parameter conversions for type parameters which are known to
	be reference types.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* generic.cs (GenericConstraints): Added `IsReferenceType' and
	`IsValueType' properties.

	* support.cs (ReflectionConstraints): Use
	Type.GetGenericParameterConstraints() instead of the old hack.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* generic.cs (GenericConstraints): Moved here and made it an
	abstract class.

	* support.cs (GenericConstraints): Moved to generic.cs.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* support.cs
	(ReflectionConstraints): Un-nested this class and made it public.

	* typemanager.cs
	(TypeManager.GetTypeParameterConstraints): New public method.
	(TypeManager.HasConstructorConstraint): Use the attributes.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* support.cs (GenericConstraints): Replaced `HasConstructor',